fix .topic-tag-contrast .delete-topic-link
https://github.com/marketplace/category/api-management

--- a/github-dark.user.css
+++ b/github-dark.user.css
@@ -21904,6 +21904,9 @@
   .repository-content > .Box--condensed > .Box-body.bg-blue-light {
     background: #182030 !important;
   }
+  .topic-tag-contrast, .topic-tag-contrast .delete-topic-link {
+    background: #182030;
+  }
   .commit-ref, .branch-name {
     background: #182030;
     color: #9daccc;
@@ -21947,12 +21950,14 @@
   .topic-tag-action .add-topic-button, .topic-tag-action .remove-topic-button,
   .commit-desc + .commit-branches,
   .pricing-matrix-table .pricing-matrix-table-dark,
-  .topic-tag-contrast .delete-topic-link,
   .repository-content > .Box--condensed:not(#readme):not(.file-holder),
   .border-blue, body[class="page-responsive"] .border-blue,
   .timeline-comment.current-user .tabnav-tab.selected, .full-commit,
   .full-commit .commit-meta {
     border-color: #246 !important;
+  }
+  .topic-tag-contrast .delete-topic-link {
+    border-color: #246;
   }
   .blob-history, .recently-touched-branches li {
     border-bottom-color: #246 !important;
